alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1457,7 +1457,7 @@ section {
 
 /* rocket - section start */
 .from_start_sec {
-    padding: 80px 0;
+    padding-top: 80px;
 }
 
 /* lock width to avoid shifting */
